# rust_todo_app

./: .env  Cargo.toml
migrations/2022-07-16-160013_users/: up.sql
migrations/2022-07-16-160112_tasks/: down.sql  up.sql
src/: jwt.rs  lib.rs  main.rs  models.rs  schema.rs  state.rs  valid.rs
src/middleware/: auth.rs
src/models/: authentication.rs  authentification.rs  mod.rs  pagination.rs  task.rs  user.rs
src/routes/: tasks.rs
src/routes/auth/: login.rs  register.rs
src/routes/tasks/: check.rs  delete_all.rs  delete_specific.rs  get_specific.rs  mod.rs  new.rs  update.rs  user_tasks.rs
src/state/: app.rs  mod.rs  pool.rs
src/valid/: mod.rs  new_user_req.rs
